fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,8 @@
   display: inline-block;
   background-color: whitesmoke;
   border-radius: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 .calendar-table table {
   margin: auto;
